병목현상을 줄여보자

--- a/src/main/resources/templates/SearchPage.html
+++ b/src/main/resources/templates/SearchPage.html
@@ -129,15 +129,20 @@
                     <br>
                     <p align=Center size=9><img src="https://i.ibb.co/f2ghtBm/Recommendation.png"></p>
                     <br>
-                    &nbsp;&nbsp;&nbsp;키워드를 입력해주세요
                     <br>
-                    <form action="/recommend" method="POST" border="1">
+                    <center>
+                      &nbsp;&nbsp;&nbsp;키워드를 입력해주세요
+                      <form action="/recommend" method="POST" border="1">
                         &nbsp;&nbsp;&nbsp;<input type="text" name = "keyword" placeholder="">
                         <br>
                         <br>
-                        &nbsp;&nbsp;&nbsp;<input type="submit" value=" 추천 " />
-                    </form>
-      
+                        <center><input TYPE="IMAGE" src="https://i.ibb.co/pPxMtZj/recommendation-Button.png" 
+                          onmouseover="this.src='https://i.ibb.co/6mW8dzq/recommendation-Button.png'" 
+                          onmouseout="this.src='https://i.ibb.co/pPxMtZj/recommendation-Button.png'" 
+                          name="submit" value="submit">
+                        <center/>
+                      </form>
+                    </center>
                 </td>
                 <td class="content">
 
